# Thesis

./: .gitignore  README.md  pyproject.toml
doc/: cleaned_ref.bib  main.tex  ref.bib
doc/chapters/: appendix.tex  chap1.tex  chap2.tex  chap3.tex  chap4.tex  intro.tex
doc/sections/: abstract.tex  preface.tex  xabstract.tex
doc/sections/appendices/: appendixA_HF.tex  appendix_A.tex  appendix_B.tex
doc/sections/chap1/: entanglement.tex  lin_alg.tex  quantum_computing.tex  quantum_mechanics.tex  time_evolution.tex
doc/sections/chap2/: general_study.tex  hartree.tex  methods_draft.tex  postprocessing_methods.tex  summary_workflow.tex  system_init.tex  time_evolution_methods.tex
doc/sections/chap3/: Optimization_config.tex  general_study_results.tex  time_evolution_res.tex  time_independent_basis.tex
src/: TDHF.py  bipartite_hartree.py  distinguishable_particle_breakdown.py  dvr_validation.py  energy_levels.py  entanglement_peak.py  entropy_analysis.py  main.py  optimization.py  playground.py  simple_time_evolution.py  sinc_optimization.py  sinc_time_evolution.py  single_qubit_rotation.py  time_evolution.py
src/data/: distinguishable_particle_breakdown.pkl  entropies_various_params_150125.json  lz_benchmark_results.pkl  lz_runtime_benchmark.pkl
src/utils/: bipartite_hartree.py  potential.py  qd_system.py  sinc_bipartite_hartree.py  visualization.py
