[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Jonny Aarstad Igeh <jonny.igeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
h5py = "3.12.1"
llvmlite = "0.43.0"
mpmath = "1.3.0"
numba = "0.60.0"
numpy = "2.0.2"
pandas = "2.2.3"
pyscf = "2.7.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
scipy = "1.14.1"
six = "1.16.0"
sympy = "1.13.3"
tzdata = "2024.2"
tqdm = "^4.66.5"
quantum-systems = {path = "../quantum-systems", develop = true}
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
